fullSandbox11072023/force-app/main/default/objects/Zip_Code_Territories__c/Zip_Code_Territories__c.object-meta.xml
<CustomObject>
    <label>Zip Code Territories</label>
    <nameField>
        <label>Zip Code Territories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Code Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>