fullSandbox11072023/force-app/main/default/objects/Zip_Code_Territories__c/fields/Alternate_Care__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Care__c</fullName>
    <label>Alternate Care</label>
    <length>50</length>
    <type>Text</type>
</CustomField>