fullSandbox11072023/force-app/main/default/objects/Zip_Code_Territories__c/fields/Anesthesia__c.field-meta.xml
<CustomField>
    <fullName>Anesthesia__c</fullName>
    <label>Anesthesia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>