fullSandbox11072023/force-app/main/default/objects/Zip_Code_Territories__c/fields/EMS__c.field-meta.xml
<CustomField>
    <fullName>EMS__c</fullName>
    <label>EMS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>