fullSandbox11072023/force-app/main/default/objects/Zip_Code_Territories__c/fields/Fix_Me_Please__c.field-meta.xml
<CustomField>
    <fullName>Fix_Me_Please__c</fullName>
    <formula>LEN(Name) &gt; 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fix Me Please</label>
    <type>Checkbox</type>
</CustomField>