fullSandbox11072023/force-app/main/default/objects/Zip_Code_Territories__c/fields/IA__c.field-meta.xml
<CustomField>
    <fullName>IA__c</fullName>
    <label>IA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>