fullSandbox11072023/force-app/main/default/objects/Zip_Code_Territories__c/fields/Respiratory__c.field-meta.xml
<CustomField>
    <fullName>Respiratory__c</fullName>
    <label>Respiratory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>