fullSandbox11072023/force-app/main/default/objects/Zip_Code_Territories__c/fields/Surgical_Percuvance__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Percuvance__c</fullName>
    <label>Surgical Percuvance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>