fullSandbox11072023/force-app/main/default/objects/Zip_Code_Territories__c/fields/Urology__c.field-meta.xml
<CustomField>
    <fullName>Urology__c</fullName>
    <label>Urology</label>
    <length>50</length>
    <type>Text</type>
</CustomField>