fullSandbox11072023/force-app/main/default/objects/Zip_Code_Territories__c/fields/Vascular__c.field-meta.xml
<CustomField>
    <fullName>Vascular__c</fullName>
    <label>Vascular</label>
    <length>50</length>
    <type>Text</type>
</CustomField>