fullSandbox11072023/force-app/main/default/objects/Zip_Code_Territories__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <externalId>true</externalId>
    <label>Zip Code</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>