fullSandbox11072023/force-app/main/default/objects/Zip_Code_Territories__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Zip_Code__c</columns>
    <columns>NAME</columns>
    <columns>Surgical_Disposables__c</columns>
    <columns>Surgical_Instruments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>